--- a/Source/WpfUtility/WpfUtility.csproj
+++ b/Source/WpfUtility/WpfUtility.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Behaviors\ChangeBehavior.cs" />
     <Compile Include="Behaviors\DataGridAutoscrollBehavior.cs" />
     <Compile Include="Behaviors\DataGridBehavior.cs" />
+    <Compile Include="Behaviors\ListBoxAutoscrollBehavior.cs" />
     <Compile Include="Common\CollectionExtensions.cs" />
     <Compile Include="Common\ObservableCollectionEx.cs" />
     <Compile Include="Common\PropertyObserver.cs" />
